# openinstall-rtn-harmony

./: README.md  package.json
harmony/: openinstall.har
harmony/openinstall/: Index.ets  oh-package.json5
harmony/openinstall/src/main/: module.json5
harmony/openinstall/src/main/cpp/: CMakeLists.txt  RTNOpenInstall.cpp  RTNOpenInstall.h  RTNOpenInstallPackage.h
harmony/openinstall/src/main/ets/: OpenInstallModule.ets  OpenInstallPackage.ets  ResultData.ets
js/: NativeOpenInstall.ts  index.ts
src/: NativeOpenInstall.ts
